# kd-tree

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  kdtree.odp
include/: kdtree.h  kdtree.inl  utilities.h
src/: CMakeLists.txt  build_kdtree.cpp  query_kdtree.cpp
test/: CMakeLists.txt  bruteforcesolver.cpp
test/dataset1/: query_data.csv  sample_data.csv
test/dataset2/: query_data.csv  sample_data.csv
test/dataset3/: query_data.csv  sample_data.csv
